examples/test/testpolicy3503.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3503
  namespace: namespace467
spec:
  podSelector:
    matchLabels:
      key7: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value16
          key19: value8
          key11: value37
      podSelector:
        matchLabels:
          key30: value1
          key32: value42
